<resources>
    <string name="app_name">Tugasque</string>
    <string name="masuk">Masuk</string>
    <string name="e_mail">E-Mail</string>
    <string name="title_activity_siswa">SiswaActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tugas">Tugas</string>
    <string name="akun">Akun</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selamat_datang">Selamat Datang,</string>
    <string name="buat_tugas">Buat Tugas</string>
    <string name="test_kelas">XI-MIPA.6</string>
    <string name="test_nama">Ahmad Reihan Alavi</string>
    <string name="tidak_ada_tugas">Tidak ada tugas</string>
    <string name="nama_lengkap">NAMA LENGKAP</string>
    <string name="email">EMAIL</string>
    <string name="test_email">reihanalavi@gmail.com</string>
    <string name="akses">AKSES</string>
    <string name="test_akses">Ketua Kelas</string>
    <string name="kelas">KELAS</string>
    <string name="keluar">Keluar</string>
    <string name="test_guru">R1 M. Elfin Noor S,Kom., M,Pd.</string>
    <string name="guru">Guru</string>
    <string name="mata_pelajaran">Mata Pelajaran</string>
    <string name="jenis_tugas">Jenis Tugas</string>
    <string name="nama_tugas">Nama Tugas</string>
    <string name="deskripsi_tugas">Deskripsi Tugas</string>
    <string name="foto_tugas_opsional">Foto Tugas (Opsional)</string>
    <string name="tanggal_mulai">Tanggal Mulai</string>
    <string name="tanggal_selesai">Tanggal Selesai</string>
    <string name="pilih_kelas">PILIH KELAS</string>
    <string name="guru_pengampu">GURU PENGAMPU</string>
    <string name="pilih_guru_pengampu">PILIH GURU PENGAMPU</string>
    <string name="foto_tugas">FOTO TUGAS</string>
    <string name="unggah_foto_maks_3">Unggah Foto (Maks. 3)</string>
    <string name="detail_tugas">DETAIL TUGAS</string>
    <string name="test_mapel"><![CDATA[Teknologi Informasi & Komunikasi]]></string>
    <string name="test_jenis">Tugas Individu</string>
    <string name="project_game_modul_1">Project Game - Modul 1</string>
    <string name="test_deskripsi">Buat kelompok dengan anggota 6 anak untuk membuat game dengan kriteria :  1. Memanfaatkan Layer  2. Menggunakan Plugin Keyboard atau Touch</string>
    <string name="senin_31_desember_2019">Senin, 31 Desember 2019</string>
    <string name="teruskan_ke_kelas">Teruskan ke Kelas</string>
    <string name="teruskan">Teruskan</string>
    <string name="ubah_tugas">UBAH TUGAS</string>
    <string name="profil">PROFIL</string>
    <string name="urutkan_jenis">Urutkan Jenis</string>
    <string name="urutkan_waktu">Urutkan Waktu</string>
    <string name="tugas_kelompok">Tugas Kelompok</string>
    <string name="tugas_individu">Tugas Individu</string>
    <string name="tidak_ada_foto">TIDAK ADA FOTO</string>
    <string name="tugas_pribadi">Tugas Pribadi</string>
    <string name="test_kepsek">Pa Udik</string>
    <string name="tugas_rumah">Rumah</string>
    <string name="tugas_sekolah">Sekolah</string>
    <string name="tugas_proyek">Proyek</string>
    <string name="tugas_praktek">Praktek</string>
    <string name="password">Password</string>
    <string name="lengkapi_data">Lengkapi Data</string>
    <string name="nama_lengkap_kecil">Nama Lengkap</string>
    <string name="nis">NIS/Kode Guru</string>
    <string name="daftar">Belum punya akun?</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="lupa_data">Lupa Password</string>
    <string name="masukkan_e_mail_dan_nomor_handphone_agar_kami_dapat_menghubungi_anda">Masukkan NIS/Kode Guru dan nomor Handphone (disarankan WhatsApp) agar kami dapat menghubungi anda</string>
    <string name="nomor_handphone">Nomor Handphone</string>
    <string name="daftarakun">Daftar</string>
    <string name="ganti_password">Ubah Password</string>
    <string name="password_lama">Password Lama</string>
    <string name="password_baru">Password Baru</string>
    <string name="konfirmasi_password_baru">Konfirmasi Password Baru</string>
    <string name="admin">Admin</string>
    <string name="lupa_password_nav">Lupa Password</string>
    <string name="kirim_notif">Kirim Notif</string>
    <string name="entry_data">Entry Data</string>
    <string name="layanan_customer_care">Layanan Customer Care</string>
    <string name="password_sementara">Password Sementara</string>
    <string name="status">Status</string>
    <string name="hubungi">Hubungi</string>
    <string name="kembalikan_password">Kembalikan Password</string>
    <string name="entry_all">Entry All</string>
    <string name="formatted_string">Formatted String</string>
    <string name="set">Set</string>
    <string name="custom_entry">Custom Entry</string>
    <string name="update">Update</string>
    <string name="entry_individual">Entry Individual</string>
    <string name="kelas_kecil">Kelas</string>
    <string name="akses_kecil">Akses</string>
    <string name="check">Check</string>
    <string name="nis_topic">NIS/Topic</string>
    <string name="pesan">Pesan</string>
    <string name="kirim">Kirim</string>
    <string name="cari">Cari</string>
    <string name="field">Field</string>
    <string name="value">Value</string>
</resources>
