<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context="com.smansara.tugasque.activities.LoginActivity">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/constraintLayout_login_atas"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="15dp">

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:background="@drawable/logo_tugasque"
            android:id="@+id/imageView_login_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:transitionName="tugasque"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/rubik_light"
            android:text="@string/masuk"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView_login_logo"
            android:id="@+id/textView_login_masuk"/>

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/login_button_rounded"
            android:hint="@string/e_mail"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/textView_login_masuk"
            android:layout_marginTop="32dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:fontFamily="@font/roboto_light"
            android:id="@+id/editText_login_email"/>
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:inputType="textPassword"
            android:background="@drawable/login_button_rounded"
            android:hint="@string/password"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/editText_login_email"
            android:layout_marginTop="8dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:fontFamily="@font/roboto_light"
            android:id="@+id/editText_login_password"/>

        <Button
            android:id="@+id/button_login_masuk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/solid_button_white"
            android:fontFamily="@font/roboto_light"
            android:text="@string/masuk"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:textColor="@color/colorPrimary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText_login_password" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daftar"
            android:fontFamily="@font/roboto_light"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textAlignment="textStart"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="@id/button_login_masuk"
            app:layout_constraintTop_toBottomOf="@id/button_login_masuk"
            android:layout_marginBottom="25dp"
            android:layout_marginEnd="25dp"
            android:id="@+id/text_daftar"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lupa_password"
            android:fontFamily="@font/roboto_light"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textAlignment="textStart"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            app:layout_constraintRight_toRightOf="@id/button_login_masuk"
            app:layout_constraintTop_toBottomOf="@id/button_login_masuk"
            android:layout_marginBottom="25dp"
            android:id="@+id/text_lupa"/>
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ganti_password"
        android:fontFamily="@font/roboto_light"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_login_layanan"
        android:layout_marginBottom="25dp"
        android:id="@+id/text_ganti"/>
    <Button
        android:id="@+id/button_login_layanan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/solid_button_white"
        android:fontFamily="@font/roboto_light"
        android:text="@string/layanan_customer_care"
        android:textColor="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>
