<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.AdminNotifFragment">
    <android.support.v4.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/swipeRefresh_adminnotif">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:hint="@string/nama_lengkap_kecil"
                android:id="@+id/editText_adminnotif_nama"
                android:fontFamily="@font/rubik_light"
                app:layout_constraintRight_toLeftOf="@id/button_adminnotif_check"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/rounded_button_smallradius"
                android:text="@string/check"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/rubik_light"
                app:layout_constraintTop_toTopOf="parent"
                android:maxLines="1"
                app:layout_constraintRight_toRightOf="parent"
                android:id="@+id/button_adminnotif_check"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/nis_topic"
                android:id="@+id/editText_adminnotif_topic"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:maxLines="1"
                android:fontFamily="@font/rubik_light"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/editText_adminnotif_nama"
                app:layout_constraintLeft_toLeftOf="parent"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/pesan"
                android:id="@+id/editText_adminnotif_pesan"
                android:fontFamily="@font/rubik_light"
                android:maxLines="2"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintRight_toLeftOf="@id/button_adminnotif_kirim"
                app:layout_constraintTop_toBottomOf="@id/editText_adminnotif_topic"
                app:layout_constraintLeft_toLeftOf="parent"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/solid_button_blue"
                android:text="@string/kirim"
                android:textColor="@android:color/white"
                android:fontFamily="@font/rubik_light"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/editText_adminnotif_topic"
                android:maxLines="1"
                android:layout_marginEnd="15dp"
                app:layout_constraintRight_toRightOf="parent"
                android:id="@+id/button_adminnotif_kirim"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView_adminnotif"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/button_adminnotif_kirim">
            </android.support.v7.widget.RecyclerView>
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.SwipeRefreshLayout>
</FrameLayout>