<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".activities.DetailLupaActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nama_lengkap"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/rubik_light"
        android:textSize="12sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textAllCaps="true"
        android:id="@+id/textView_detaillupa_nama"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Ahmad Reihan Alavi"
        android:textColor="@android:color/black"
        android:fontFamily="@font/rubik_light"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/textView_detaillupa_nama"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/textView_detaillupa_namaE"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nomor_handphone"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/rubik_light"
        android:textSize="12sp"
        android:layout_marginTop="10dp"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/textView_detaillupa_namaE"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/textView_detaillupa_nomor"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="085877126566"
        android:textColor="@android:color/black"
        android:fontFamily="@font/rubik_light"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/textView_detaillupa_nomor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/textView_detaillupa_nomorE"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_lama"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/rubik_light"
        android:textSize="12sp"
        android:layout_marginTop="10dp"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/textView_detaillupa_nomorE"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/textView_detaillupa_plama"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="whbwhb138138"
        android:textColor="@android:color/black"
        android:fontFamily="@font/rubik_light"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/textView_detaillupa_plama"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/textView_detaillupa_plamaE"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_sementara"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/rubik_light"
        android:textSize="12sp"
        android:layout_marginTop="10dp"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/textView_detaillupa_plamaE"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/textView_detaillupa_pbaru"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="10297"
        android:textColor="@android:color/black"
        android:fontFamily="@font/rubik_light"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/textView_detaillupa_pbaru"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/textView_detaillupa_pbaruE"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/rubik_light"
        android:textSize="12sp"
        android:layout_marginTop="10dp"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/textView_detaillupa_pbaruE"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/textView_detaillupa_status"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Belum Diganti"
        android:textColor="@android:color/black"
        android:fontFamily="@font/rubik_light"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/textView_detaillupa_status"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/textView_detaillupa_statusE"
        android:layout_marginBottom="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button_smallradius"
        android:text="@string/kembalikan_password"
        android:fontFamily="@font/rubik_light"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@id/button_detaillupa_hubungi"
        android:layout_marginBottom="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/button_detaillupa_reset"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/solid_button_blue"
        android:text="@string/hubungi"
        android:fontFamily="@font/rubik_light"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/button_detaillupa_hubungi"/>

</android.support.constraint.ConstraintLayout>