<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    android:padding="15dp"
    tools:context="com.smansara.tugasque.activities.LengkapiActivity">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_kembali"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/button_lupa_kembali"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/constraintLayout_lupa_atas"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:background="@drawable/logo_tugasque"
            android:id="@+id/imageView_lupa_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:transitionName="tugasque"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/rubik_light"
            android:text="@string/lupa_data"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView_lupa_logo"
            android:id="@+id/textView_lupa_masuk"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/rubik_light"
            android:text="@string/masukkan_e_mail_dan_nomor_handphone_agar_kami_dapat_menghubungi_anda"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_lupa_masuk"
            android:id="@+id/textView_lupa_deskripsi"/>

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/login_button_rounded"
            android:hint="@string/nis"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/textView_lupa_deskripsi"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto_light"
            android:id="@+id/editText_lupa_nis"/>

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:inputType="number"
            android:background="@drawable/login_button_rounded"
            android:hint="@string/nomor_handphone"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/editText_lupa_nis"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_light"
            android:id="@+id/editText_lupa_nomor"/>

        <Button
            android:id="@+id/button_lupa_masuk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/solid_button_white"
            android:fontFamily="@font/roboto_light"
            android:text="@string/lupa_password"
            android:textColor="@color/colorPrimary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText_lupa_nomor" />

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>
