<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.AdminCariFragment">
    <android.support.v4.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/swipeRefresh_admincari">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cari"
                android:textAllCaps="true"
                android:textAlignment="center"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:textSize="16sp"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/rubik_light"
                android:id="@+id/textView_admincari_header"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button_smallradius"
                app:layout_constraintTop_toBottomOf="@id/textView_admincari_header"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:text="@string/field"
                android:fontFamily="@font/rubik_light"
                android:textColor="@color/colorPrimary"
                android:id="@+id/button_admincari_field"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/rounded_button_smallradius"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@id/button_admincari_field"
                app:layout_constraintTop_toBottomOf="@id/textView_admincari_header"
                android:layout_marginTop="10dp"
                app:layout_constraintBottom_toBottomOf="@id/button_admincari_field"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="15dp"
                android:maxLines="1"
                android:hint="@string/value"
                android:textColorHint="@color/colorPrimary"
                android:textAlignment="center"
                android:id="@+id/editText_admincari_value"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/solid_button_blue"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/button_admincari_field"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/cari"
                android:textColor="@android:color/white"
                android:fontFamily="@font/rubik_light"
                android:id="@+id/button_admincari_cari" />
            <android.support.v7.widget.RecyclerView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/button_admincari_cari"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="10dp"
                android:id="@+id/recyclerView_admincari">
            </android.support.v7.widget.RecyclerView>
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.SwipeRefreshLayout>
</FrameLayout>